--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ django-simple-captcha==0.4.0
 html5lib==0.95
 itsdangerous==0.23
 nose==1.3.0
+matplotlib==1.2.0
 numpy==1.7.1
+pymc==2.3
 selenium==2.39.0
 six==1.4.1
 wsgiref==0.1.2
