--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Werkzeug==0.9.4
 beautifulsoup4==4.3.2
 bleach==1.2.2
 django-appconf==0.6
+django-bleach==0.2.0
 django-compressor==1.3
 django-devserver==0.7.0
 django-lazysignup==0.12.2
