--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-compressor==1.3
 django-devserver==0.7.0
 django-lazysignup==0.12.2
 django-reversion==1.8.0
+django-tinymce==1.5.2
 html5lib==0.95
 itsdangerous==0.23
 nose==1.3.0
